# vrdx

./: .gitignore  README.md  justfile  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md  IMPLEMENTATION.md
tests/unit/: test_cli.py  test_decisions.py  test_discovery.py  test_logging.py  test_markers.py  test_persistence.py  test_state.py  test_template.py  test_ui_app.py
vrdx/: __init__.py  cli.py
vrdx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vrdx/app/: __init__.py  commands.py  discovery.py  logging.py  persistence.py  state.py
vrdx/parser/: __init__.py  decisions.py  markers.py  template.py
vrdx/ui/: __init__.py  app.py  panes.py  styles.tcss
