[project]
name = "vrdx"
version = "0.1.0"
description = "CLI tool for capturing and managing decision records in your repo."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markdown-it-py>=3.0.0",
    "mdurl>=0.1.2",
    "nuitka>=2.7.16",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "textual>=0.59.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
